# auth0_axum

./: Cargo.toml  auth_test.http
docker/: docker-compose.yml
front/: package-lock.json  package.json
front/src/: App.tsx  main.tsx
front/src/components/: GetUser.tsx  Logout.tsx  Profile.tsx
migrations/: 20230611050141_schema.sql
src/: handlers.rs  main.rs  router.rs
src/models/: users.rs
