[package]
name = "auth0_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = { version = "0.4.26", features = ["serde"] }
cookie = "0.17.0"
dotenv = "0.15.0"
hyper = { version = "0.14.26", features = ["full"] }
hyper-tls = "0.5.0"
jsonwebtoken = "8.3.0"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = "1.0.164"
serde_json = "1.0.96"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing-subscriber = "0.3.17"
